[tool.poetry]
name = "dsc"
version = "0.1.0"
description = "a tool to bomb a grabify link and fight back against those pesky 10-year-olds"
authors = ["Spinfal <spinfal@atheist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"
random-proxies = "^0.0.2"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
